--- a/wishlist.html
+++ b/wishlist.html
@@ -40,21 +40,27 @@
                 </div>
                 <ul class="menu-items">
                     <li><a href="/">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Category</a></li>
-                    <li><a href="#">Menu</a></li>
                     <li><a href="wishlist.html">Wishlist</a></li>
-                    <li><a href="#">Contact</a></li>
                 </ul>
-                <a href="/"> <img class="logo" src="/assets/Logo/Book-Haven-Icon.png" alt="" style="width: 150px;"></a>
+                <a href="/"> <img class="logo" src="/assets/image/Logo/Book-Haven-Icon.png" alt=""
+                        style="width: 150px;"></a>
             </div>
         </nav>
     </header>
 
+    <div style="margin-top: 100px;">
 
+        <div id="wishlist-container">
+            <h2>Your Wishlist</h2>
+            <div id="wishlist"></div>
+        </div>
+
+
+    </div>
 
     <!-- JavaScript at the bottom for better performance -->
     <script src="scripts.js" defer></script> <!-- External JS file -->
+    <script src="app.js"></script>
 </body>
 
 </html>
