--- a/wishlist.html
+++ b/wishlist.html
@@ -8,10 +8,6 @@
 
     <title>Book Haven</title> <!-- Title of the webpage that appears in the browser tab -->
 
-    <!-- SEO Meta Tags -->
-    <meta name="description" content="This is a sample of an ideal HTML document format.">
-    <meta name="keywords" content="HTML, CSS, JavaScript, Web Development">
-    <meta name="author" content="Your Name">
 
     <!-- Favicon -->
     <link rel="icon" href="favicon.ico" type="image/png" style="border-radius: 50%;"> <!-- Favicon for the website -->
@@ -48,19 +44,18 @@
         </nav>
     </header>
 
-    <div style="margin-top: 100px;">
 
-        <div id="wishlist-container">
-            <h2>Your Wishlist</h2>
-            <div id="wishlist"></div>
+    <div style="margin-top: 100px;" class="container">
+        <h2>Your Wishlist <span id="wishlist-count">0</span></h2>
+        <div id="wishlist-books" class="booksDev">
+            <!-- Wishlist Books will be shown here -->
         </div>
-
+    </div>
 
     </div>
 
     <!-- JavaScript at the bottom for better performance -->
-    <script src="scripts.js" defer></script> <!-- External JS file -->
-    <script src="app.js"></script>
+    <script src="app.js"></script> <!-- External JS file -->
 </body>
 
 </html>
