--- a/index.html
+++ b/index.html
@@ -8,11 +8,6 @@
 
     <title>Book Haven</title> <!-- Title of the webpage that appears in the browser tab -->
 
-    <!-- SEO Meta Tags -->
-    <meta name="description" content="This is a sample of an ideal HTML document format.">
-    <meta name="keywords" content="HTML, CSS, JavaScript, Web Development">
-    <meta name="author" content="Your Name">
-
     <!-- Favicon -->
     <link rel="icon" href="/assets/image/Logo/favicon.ico" type="image/png" style="border-radius: 50%;">
     <!-- Favicon for the website -->
@@ -20,11 +15,6 @@
     <!-- External CSS Link -->
     <link rel="stylesheet" href="style.css"> <!-- Link to external CSS file -->
 
-    <!-- External Fonts or Libraries (Optional) -->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-
-    <!-- External JavaScript Libraries (Optional) -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" defer></script> <!-- External JS file -->
 </head>
 
 <body style="margin: 0; box-sizing: 0;">
@@ -42,14 +32,18 @@
                 <ul class="menu-items">
                     <li><a href="/">Home</a></li>
                     <li><a href="wishlist.html">Wishlist</a></li>
+                    <li><a href="bookDetails.html">BookDetails</a></li>
                 </ul>
+
                 <a href="/"> <img class="logo" src="/assets/image/Logo/Book-Haven-Icon.png" alt=""
                         style="width: 150px;"></a>
+
+                <div class="searchBer"><input type="text" id="search-input" placeholder="Search Books..." /></div>
             </div>
         </nav>
     </header>
 
-    <div  style="margin-top: 100px;" class="container" >
+    <div style="margin-top: 100px;" class="container">
         <!-- Loader -->
         <div id="loader">
             <div class="devLoader">
