create genres/subject filtering

--- a/index.html
+++ b/index.html
@@ -39,6 +39,17 @@
                         style="width: 150px;"></a>
 
                 <div class="searchBer"><input type="text" id="search-input" placeholder="Search Books..." /></div>
+                <select id="genre-filter">
+                    <option value="">All Genres</option>
+                    <option value="fiction">Fiction</option>
+                    <option value="science">Science</option>
+                    <option value="history">History</option>
+                    <option value="literature">Literature</option>
+                    <option value="biography">Biography</option>
+                    <option value="fantasy">Fantasy</option>
+                    <option value="poetry">Poetry</option>
+                    <option value="philosophy">Philosophy</option>
+                </select>
             </div>
         </nav>
     </header>
