--- a/bookDetails.html
+++ b/bookDetails.html
@@ -14,6 +14,10 @@
 
     <!-- External CSS Link -->
     <link rel="stylesheet" href="style.css"> <!-- Link to external CSS file -->
+    <link rel="stylesheet" href="/src/css/navber.css"> <!-- Link to external CSS file -->
+    <link rel="stylesheet" href="/src/css/loding.css"> <!-- Link to external CSS file -->
+    <link rel="stylesheet" href="/src/css/books.css"> <!-- Link to external CSS file -->
+
 
     <style>
         .book-details {
