--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 
     <!-- External CSS Link -->
     <link rel="stylesheet" href="style.css"> <!-- Link to external CSS file -->
+    <link rel="stylesheet" href="/src/css/navber.css"> <!-- Link to external CSS file -->
+    <link rel="stylesheet" href="/src/css/loding.css"> <!-- Link to external CSS file -->
+    <link rel="stylesheet" href="/src/css/books.css"> <!-- Link to external CSS file -->
 
 </head>
 
@@ -38,7 +41,8 @@
                 <a href="/"> <img class="logo" src="/assets/image/Logo/Book-Haven-Icon.png" alt=""
                         style="width: 150px;"></a>
 
-                <div class="searchBer"><input type="text" id="search-input" placeholder="Search Books..." /></div>
+                <div class="searchBer"><input type="text" id="search-input" placeholder="Search Books..." /> <button
+                        id="close-btn">X</button></div>
                 <select id="genre-filter">
                     <option value="">All Genres</option>
                     <option value="fiction">Fiction</option>
