--- a/wishlist.html
+++ b/wishlist.html
@@ -14,6 +14,9 @@
 
     <!-- External CSS Link -->
     <link rel="stylesheet" href="style.css"> <!-- Link to external CSS file -->
+    <link rel="stylesheet" href="/src/css/navber.css"> <!-- Link to external CSS file -->
+    <link rel="stylesheet" href="/src/css/loding.css"> <!-- Link to external CSS file -->
+    <link rel="stylesheet" href="/src/css/books.css"> <!-- Link to external CSS file -->
 
     <!-- External Fonts or Libraries (Optional) -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
