update design wishlist books

--- a/index.html
+++ b/index.html
@@ -38,12 +38,13 @@
                     <li><a href="bookDetails.html">BookDetails</a></li>
                 </ul>
 
-                <a href="/"> <img class="logo" src="/assets/image/Logo/Book-Haven-Icon.png" alt=""
+                <a href="/" > <img class="logo" src="/assets/image/Logo/Book-Haven-Icon.png" alt=""
                         style="width: 150px;"></a>
 
-                <div class="searchBer"><input type="text" id="search-input" placeholder="Search Books..." /> <button
-                        id="close-btn">X</button></div>
-                <select id="genre-filter">
+                <div class="searchBer"><input type="text" id="search-input" placeholder="Search Books..." />
+                    <button id="close-btn">X</button>
+                </div>
+                <select class="genreFilter" id="genre-filter">
                     <option value="">All Genres</option>
                     <option value="fiction">Fiction</option>
                     <option value="science">Science</option>
