--- a/wishlist.html
+++ b/wishlist.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="/src/css/navber.css"> <!-- Link to external CSS file -->
     <link rel="stylesheet" href="/src/css/loding.css"> <!-- Link to external CSS file -->
     <link rel="stylesheet" href="/src/css/books.css"> <!-- Link to external CSS file -->
+    <link rel="stylesheet" href="/src/css/wishList.css"> <!-- Link to external CSS file -->
 
     <!-- External Fonts or Libraries (Optional) -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
@@ -39,7 +40,7 @@
                 </div>
                 <ul class="menu-items">
                     <li><a href="/">Home</a></li>
-                    <li><a href="wishlist.html">Wishlist</a></li>
+                    <li><a href="wishlist.html">Wishlist  (<span id="wishlist-count">0</span>)</a></li>
                     <li><a href="bookDetails.html">BookDetails</a></li>
                 </ul>
                 <a href="/"> <img class="logo" src="/assets/image/Logo/Book-Haven-Icon.png" alt=""
@@ -49,7 +50,7 @@
     </header>
     
 
-    <div style="margin-top: 100px;" class="container">
+    <div style="margin-top: 100px; margin-bottom: 60px;" class="container">
         <h2>Your Wishlist <span id="wishlist-count">0</span></h2>
 
              <!-- Loader -->
