update wislist page & responsive

--- a/bookDetails.html
+++ b/bookDetails.html
@@ -127,6 +127,8 @@
         // Call the function to load book details
         loadBookDetails();
     </script>
+
+    <script src="src/utils/header.js" defer></script>
 </body>
 
 </html>
