--- a/books.html
+++ b/books.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Ensures responsive design -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!-- Ensures compatibility with Internet Explorer -->
 
-    <title>Book Haven</title> <!-- Title of the webpage that appears in the browser tab -->
+    <title>books || Book Haven</title> <!-- Title of the webpage that appears in the browser tab -->
 
     <!-- Favicon -->
     <link rel="icon" href="/assets/image/Logo/favicon.ico" type="image/png" style="border-radius: 50%;">
@@ -73,6 +73,7 @@
 
     <script type="module" src="scripts.js" defer></script>
     <script type="module" src="/src/utils/displayBooks.js" defer></script>
+    <script type="module" src="/src/utils/header.js" defer></script>
     <!-- <script src="./src/pages/WishListPage.js"></script> -->
 </body>
 
