--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <ul class="menu-inner">
                     <li class="menu-item"><a href="/" class="menu-link">Home</a></li>
                     <li class="menu-item"><a href="/books.html" class="menu-link">Books</a></li>
-                    <li class="menu-item"><a href="/wishlist.html" class="menu-link">Wishlist<i class='bx bx-heart'></i></a></li>
+                    <li class="menu-item"><a href="/wishlist.html" class="menu-link">Wishlist</a></li>
                 </ul>
             </div>
             <div class="burger" id="burger">
