another file update & add readme file

--- a/books.html
+++ b/books.html
@@ -1,28 +1,26 @@
 <!DOCTYPE html>
-<html lang="en"> <!-- Defines the language of the document -->
+<html lang="en">
 
 <head>
-    <meta charset="UTF-8"> <!-- Specifies the character encoding -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Ensures responsive design -->
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!-- Ensures compatibility with Internet Explorer -->
-
-    <title>books || Book Haven</title> <!-- Title of the webpage that appears in the browser tab -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>books || Book Haven</title>
 
     <!-- Favicon -->
     <link rel="icon" href="/assets/image/Logo/favicon.ico" type="image/png" style="border-radius: 50%;">
-    
     <!-- font icon link -->
     <link href="https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css" rel="stylesheet">
 
     <!-- External CSS Link -->
-    <link rel="stylesheet" href="style.css"> <!-- Link to external CSS file -->
-    <link rel="stylesheet" href="/src/css/navber.css"> <!-- Link to external CSS file -->
-    <link rel="stylesheet" href="/src/css/loding.css"> <!-- Link to external CSS file -->
-    <link rel="stylesheet" href="/src/css/books.css"> <!-- Link to external CSS file -->
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/src/css/navber.css">
+    <link rel="stylesheet" href="/src/css/loding.css">
+    <link rel="stylesheet" href="/src/css/books.css">
 
 </head>
 
-<body style="margin: 0; box-sizing: 0;">
+<body>
 
     <!-- Header Section -->
     <header class="header" id="header">
@@ -52,29 +50,49 @@
         </nav>
     </header>
 
-    <div style="margin-top: 100px;" class="container">
-        <!-- Loader -->
-        <div id="loader">
-            <div class="devLoader">
-                <div class="loader"> </div>
-            </div>
-        </div>
+    <div class="container booksDiv">
         <!-- Books  -->
-        <div id="books" class="booksDev"> </div>
-
-        <div class="paginationAlignment">
-            <div id="pagination-container" style="display: none;">
-                <button id="prev-page" class="pagination-btn" disabled>Previous</button>
-                <span id="current-page">1</span>
-                <button id="next-page" class="pagination-btn">Next</button>
+        <div class="bookFilterWithResultDiv">
+            <div class="genresFilterDiv">
+                <select id="genre-filter">
+                    <option value="">All Genres</option>
+                    <option value="fiction">Fiction</option>
+                    <option value="science">Science</option>
+                    <option value="history">History</option>
+                    <option value="literature">Literature</option>
+                    <option value="biography">Biography</option>
+                    <option value="fantasy">Fantasy</option>
+                    <option value="poetry">Poetry</option>
+                    <option value="philosophy">Philosophy</option>
+                </select>
             </div>
+
+            <div>
+                <!-- Loader -->
+                <div id="loader">
+                    <div class="devLoader">
+                        <div class="loader"> </div>
+                    </div>
+                </div>
+
+                <div id="books" class="booksDev"> </div>
+
+                <div class="paginationAlignment">
+                    <div id="pagination-container" style="display: none;">
+                        <button id="prev-page" class="pagination-btn" disabled>Previous</button>
+                        <span id="current-page">1</span>
+                        <button id="next-page" class="pagination-btn">Next</button>
+                    </div>
+                </div>
+            </div>
+
         </div>
+
     </div>
 
-    <script type="module" src="scripts.js" defer></script>
-    <script type="module" src="/src/utils/displayBooks.js" defer></script>
+        <!----------------------- Javascript -------------------------- -->
+    <script type="module" src="/src/pages/BookPage.js" defer></script>
     <script type="module" src="/src/utils/header.js" defer></script>
-    <!-- <script src="./src/pages/WishListPage.js"></script> -->
 </body>
 
 </html>
