--- a/index.html
+++ b/index.html
@@ -1,29 +1,26 @@
 <!DOCTYPE html>
-<html lang="en"> <!-- Defines the language of the document -->
+<html lang="en"> 
 
 <head>
-    <meta charset="UTF-8"> <!-- Specifies the character encoding -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Ensures responsive design -->
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!-- Ensures compatibility with Internet Explorer -->
-
-    <title>Book Haven</title> <!-- Title of the webpage that appears in the browser tab -->
+    <meta charset="UTF-8"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+    <title>Home || Book Haven</title>
 
     <!-- Favicon -->
     <link rel="icon" href="/assets/image/Logo/favicon.ico" type="image/png" style="border-radius: 50%;">
-
     <!-- font icon link -->
     <link href="https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css" rel="stylesheet">
 
-    <!-- External CSS Link -->
-    <link rel="stylesheet" href="style.css"> <!-- Link to external CSS file -->
-    <link rel="stylesheet" href="/src/css/navber.css"> <!-- Link to external CSS file -->
-    <link rel="stylesheet" href="/src/css/loding.css"> <!-- Link to external CSS file -->
-    <link rel="stylesheet" href="/src/css/books.css"> <!-- Link to external CSS file -->
+    <!-- must css link -->
+    <link rel="stylesheet" href="style.css"> 
+    <link rel="stylesheet" href="/src/css/home.css">
+    <link rel="stylesheet" href="/src/css/navber.css"> 
+    <link rel="stylesheet" href="/src/css/loding.css"> 
 
 </head>
 
-<body><!-- style="margin: 0; box-sizing: 0;"-->
-
+<body>
     <header class="header" id="header">
         <nav class="navbar container">
             <a href="/" class="brand"> <img class="logo" src="/assets/image/Logo/Book-Haven-Icon.png" alt=""
@@ -51,50 +48,17 @@
         </nav>
     </header>
 
-    <!-- Header Section -->
-    <!--  <header>
-        <nav class="navbar">
-            <div class="navbar-container container">
-                <input type="checkbox" name="" id="">
-                <div class="hamburger-lines">
-                    <span class="line line1"></span>
-                    <span class="line line2"></span>
-                    <span class="line line3"></span>
-                </div>
-                <ul class="menu-items">
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/books.html">Books</a></li>
-                    <li><a href="wishlist.html">Wishlist</a></li>
-                </ul>
+    <div class="container homeMainDiv">
 
-                <a href="/"> <img class="logo" src="/assets/image/Logo/Book-Haven-Icon.png" alt=""
-                        style="width: 150px;"></a>
-
-                <div class="searchBer"><input type="text" id="search-input" placeholder="Search Books..." />
-                    <button id="close-btn">X</button>
-                </div> 
-
-                <div>
-                    <form id="search-form">
-                        <input type="text" id="search-input" placeholder="Search books..." />
-                        <button type="submit">Search</button>
-                    </form>
-                </div>
-
-            </div>
-        </nav>
-    </header> -->
-
-    <div  class="container homeMainDiv">
         <!-- Loader -->
         <div id="loader">
             <div class="devLoader">
                 <div class="loader"> </div>
             </div>
         </div>
-        <!-- Books  -->
-        <div id="books" class="booksDev"> </div>
 
+        <!-- Books  -->
+        <div id="homeBooks" class="booksDev"> </div>
 
         <div class="paginationAlignment">
             <div id="pagination-container" style="display: none;">
@@ -103,16 +67,11 @@
                 <button id="next-page" class="pagination-btn">Next</button>
             </div>
         </div>
+
     </div>
-
-
     
     <!----------------------- Javascript -------------------------- -->
-    <script type="module" src="scripts.js" defer></script>
-    <script type="module" src="/src/utils/displayBooks.js" defer></script>
-    <!-- <script src="./src/pages/WishListPage.js"></script> -->
-
-    <!-- Herder responsive baer -->
+     <script src="index.js" defer></script>
     <script src="/src/utils/header.js" defer></script>
 </body>
 
