--- a/search.html
+++ b/search.html
@@ -1,29 +1,27 @@
 <!DOCTYPE html>
-<html lang="en"> <!-- Defines the language of the document -->
+<html lang="en">
 
 <head>
-  <meta charset="UTF-8"> <!-- Specifies the character encoding -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Ensures responsive design -->
-  <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!-- Ensures compatibility with Internet Explorer -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-  <title>Search Results || Book Haven</title> <!-- Title of the webpage that appears in the browser tab -->
+  <title>Search Results || Book Haven</title>
 
   <!-- Favicon -->
   <link rel="icon" href="/assets/image/Logo/favicon.ico" type="image/png" style="border-radius: 50%;">
-
   <!-- font icon link -->
   <link href="https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css" rel="stylesheet">
 
   <!-- External CSS Link -->
-  <link rel="stylesheet" href="style.css"> <!-- Link to external CSS file -->
-  <link rel="stylesheet" href="/src/css/navber.css"> <!-- Link to external CSS file -->
-  <link rel="stylesheet" href="/src/css/loding.css"> <!-- Link to external CSS file -->
-  <link rel="stylesheet" href="/src/css/books.css"> <!-- Link to external CSS file -->
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/src/css/navber.css">
+  <link rel="stylesheet" href="/src/css/loding.css">
+  <link rel="stylesheet" href="/src/css/search.css">
 
 </head>
 
-<body style="margin: 0; box-sizing: 0;">
-
+<body>
   <!-- Header Section -->
   <header class="header" id="header">
     <nav class="navbar container">
@@ -52,7 +50,7 @@
     </nav>
   </header>
 
-  <div style="margin-top: 100px;" class="container">
+  <div class="container homeMainDiv">
     <!-- Loader -->
     <div id="loader">
       <div class="devLoader">
@@ -60,64 +58,23 @@
       </div>
     </div>
     <!-- Books  -->
-    <div id="search-results"></div>
+    <div id="search-results" class="booksDev"></div>
 
-
-    <div class="paginationAlignment">
+    <!-- <div class="paginationAlignment">
       <div id="pagination-container" style="display: none;">
         <button id="prev-page" class="pagination-btn" disabled>Previous</button>
-        <span id="current-page">1</span>
+        <span id="current-page">Page 1</span>
         <button id="next-page" class="pagination-btn">Next</button>
       </div>
-    </div>
+    </div> -->
+
+    <div style="height: 100px;"></div>
+    
   </div>
 
-  <script>
-    // URL থেকে সার্চ কুয়েরি নেওয়া
-    const urlParams = new URLSearchParams(window.location.search);
-    const searchQuery = urlParams.get('query');
-
-    // সার্চ রেজাল্ট ফেচ করা
-    async function fetchSearchResults(query) {
-      try {
-        const response = await fetch(`https://gutendex.com/books/?search=${query}`);
-        const data = await response.json();
-
-        displaySearchResults(data.results);
-      } catch (error) {
-        console.error('Error fetching search results:', error);
-      }
-    }
-
-    // সার্চ রেজাল্ট দেখানো
-    function displaySearchResults(books) {
-      const resultsDiv = document.getElementById("search-results");
-      resultsDiv.innerHTML = '';
-
-      if (books.length === 0) {
-        resultsDiv.innerHTML = `<p>No results found for "${searchQuery}"</p>`;
-      } else {
-        books.forEach((book) => {
-          const bookItem = document.createElement("div");
-          bookItem.innerHTML = `
-                <h3>${book.title}</h3>
-                <p>Author: ${book.authors[0]?.name || 'Unknown'}</p>
-              `;
-          resultsDiv.appendChild(bookItem);
-        });
-      }
-    }
-
-    // সার্চ কুয়েরি থাকলে ফেচ করা শুরু করা
-    if (searchQuery) {
-      fetchSearchResults(searchQuery);
-    }
-  </script>
-
-  <script type="module" src="scripts.js" defer></script>
-  <script type="module" src="/src/utils/displayBooks.js" defer></script>
-  <!-- <script src="./src/pages/WishListPage.js"></script> -->
+  <!-- ------------------------Javascript ------------------ -->
   <script src="/src/utils/header.js" defer></script>
+  <script type="module" src="src/pages/search.js" defer></script>
 </body>
 
 </html>
