--- a/wishlist.html
+++ b/wishlist.html
@@ -13,10 +13,10 @@
     <link href="https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css" rel="stylesheet">
 
     <!-- External CSS Link -->
-    <link rel="stylesheet" href="style.css"> <!-- Link to external CSS file -->
-    <link rel="stylesheet" href="/src/css/navber.css"> <!-- Link to external CSS file -->
-    <link rel="stylesheet" href="/src/css/loding.css"> <!-- Link to external CSS file -->
-    <link rel="stylesheet" href="/src/css/wishList.css"> <!-- Link to external CSS file -->
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/src/css/navber.css">
+    <link rel="stylesheet" href="/src/css/loding.css">
+    <link rel="stylesheet" href="/src/css/wishList.css">
 
 </head>
 
