create wishlist badges

--- a/wishlist.html
+++ b/wishlist.html
@@ -38,7 +38,7 @@
                 <ul class="menu-inner">
                     <li class="menu-item"><a href="/" class="menu-link">Home</a></li>
                     <li class="menu-item"><a href="/books.html" class="menu-link">Books</a></li>
-                    <li class="menu-item"><a href="/wishlist.html" class="menu-link">Wishlist</a></li>
+                    <li class="menu-item wishListBadgesPosition"><a href="/wishlist.html" class="menu-link">Wishlist<span class="wishlistBadges" id="wishlist-count">0</span></a></li>
                 </ul>
             </div>
             <div class="burger" id="burger">
@@ -50,7 +50,6 @@
     </header>
 
     <div class="container homeMainDiv ">
-        <h2>Your Wishlist <span id="wishlist-count">0</span></h2>
 
         <!-- Loader -->
         <div id="loader">
