--- a/search.html
+++ b/search.html
@@ -39,7 +39,7 @@
         <ul class="menu-inner">
           <li class="menu-item"><a href="/" class="menu-link">Home</a></li>
           <li class="menu-item"><a href="/books.html" class="menu-link">Books</a></li>
-          <li class="menu-item"><a href="/wishlist.html" class="menu-link">Wishlist</a></li>
+          <li class="menu-item wishListBadgesPosition"><a href="/wishlist.html" class="menu-link">Wishlist<span class="wishlistBadges" id="wishlist-count">0</span></a></li>
         </ul>
       </div>
       <div class="burger" id="burger">
